# freebox-api

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  example.py  noxfile.py  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: constraints.txt  release.yml  tests.yml
aiofreepybox/: .gitignore  access.py  aiofreepybox.py  exceptions.py
aiofreepybox/api/: __init__.py  call.py  connection.py  contact.py  dhcp.py  domain.py  downloads.py  freeplug.py  fs.py  ftp.py  fw.py  home.py  lan.py  lcd.py  meta.py  nat  nat.py  netshare.py  notifications.py  parental.py  phone.py  player.py  rrd.py  sharelink.py  storage.py  switch.py  switches.py  system.py  tv.py  upload.py  upnpav.py  upnpigd.py  vm.py  vpn.py  wifi.py
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/aiofreepybox/: __init__.py  __main__.py  access.py  aiofreepybox.py  constants.py
src/aiofreepybox/api/: airmedia.py  dhcp.py  fs.py  player.py  tv.py
src/freebox_api/: __init__.py  access.py  aiofreepybox.py  constants.py  exceptions.py
src/freebox_api/api/: __init__.py  airmedia.py  call.py  connection.py  dhcp.py  download.py  freeplug.py  fs.py  ftp.py  fw.py  home.py  lan.py  lcd.py  netshare.py  notifications.py  parental.py  phone.py  player.py  remote.py  rrd.py  storage.py  switch.py  system.py  tv.py  upnpav.py  upnpigd.py  vm.py  wifi.py
tests/: __init__.py  example.py  test_main.py  test_version.py
