[tool.poetry]
name = "freebox-api"
version = "1.2.2"
description = "Provides asynchronous authentication and access to Freebox servers"
authors = ["stilllman <luc_touraille@yahoo.fr>", "quentame <polletquentin74@me.com>", "HACF <contact@hacf.fr>"]
license = "GNU GPL v3"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/freebox-api"
repository = "https://github.com/hacf-fr/freebox-api"
documentation = "https://freebox-api.readthedocs.io"
keywords=["freebox", "iliadbox"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/freebox-api/releases"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">=3,<4"
importlib-metadata = {version = ">=3.3,<9.0", python = "<3.12"}

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
coverage = {extras = ["toml"], version = "7.13.2"}
safety = "3.7.0"
mypy = "1.19.1"
typeguard = "4.4.4"
sphinx = "7.4.7"
sphinx-autobuild = "2021.3.14"
pre-commit = "4.5.1"
flake8 = "7.3.0"
black = "26.1.0"
flake8-bandit = "4.1.1"
flake8-bugbear = "25.11.29"
flake8-docstrings = "1.7.0"
flake8-rst-docstrings = "0.4.0"
pep8-naming = "0.15.1"
darglint = "1.8.1"
pre-commit-hooks = "5.0.0"
sphinx-rtd-theme = "3.1.0"

[tool.poetry.scripts]
freebox_api = "freebox_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["freebox_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100 reduce targetwaiting for tests creation
fail_under = 40

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
# TODO: Work on removing that
allow_untyped_defs = true
allow_untyped_calls = true
exclude = [
    '^tests/example\.py$',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
