[tool.poetry]
name = "freebox-api"
version = "1.3.0"
description = "Provides asynchronous authentication and access to Freebox servers"
authors = ["stilllman <luc_touraille@yahoo.fr>", "quentame <polletquentin74@me.com>", "HACF <contact@hacf.fr>"]
license = "GNU GPL v3"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/freebox-api"
repository = "https://github.com/hacf-fr/freebox-api"
documentation = "https://freebox-api.readthedocs.io"
keywords=["freebox", "iliadbox"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Home Automation",
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/freebox-api/releases"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">=3,<4"
importlib-metadata = {version = ">=3.3,<9.0", python = "<3.12"}

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
coverage = {extras = ["toml"], version = "7.13.3"}
safety = "3.7.0"
mypy = "1.19.1"
typeguard = "4.4.4"
pre-commit = "4.5.1"
ruff = "0.14.14"
darglint = "1.8.1"
pre-commit-hooks = "6.0.0"

# docs (Python >= 3.14)
furo = {version = "==2025.12.19", python = ">=3.14"}
myst-parser = {version = "==5.0.0", python = ">=3.14"}
sphinx = {version = "==9.1.0", python = ">=3.14"}
sphinx-autobuild = {version = "==2025.8.25", python = ">=3.14"}

[tool.poetry.scripts]
freebox_api = "freebox_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["freebox_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100 reduce targetwaiting for tests creation
fail_under = 40

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
# TODO: Work on removing that
allow_untyped_defs = true
allow_untyped_calls = true
exclude = [
    '^tests/example\.py$',
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "A001",    # Variable is shadowing a Python builtin
    "A002",    # Function argument is shadowing a Python builtin
    "E501",    # Line too long
    "ERA001",  # Found commented-out code
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
]
select = [
    "A",     # flake8-builtins
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "E",     # pycodestyle error
    "ERA",   # eradicate
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
    "UP",    # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true
known-local-folder = [
    "freebox_api",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
